# Informatics_homework

./: CMakeLists.txt  lib.cpp  main.cpp
include/: ans_handler.hpp  my_math.hpp
src/: ans_handler.cpp  my_math.cpp
